--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Lazio</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico"/>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
